# rust-hasura

./: Cargo.toml  README.md  query.graphql  user-create.graphql  user-read.graphql
graphql/: schema.json  user-by-id.graphql  user-by-username.graphql  user-create.graphql
src/: graphql.rs  helpers.rs  main.rs  types.rs
