[package]
name = "rust-hasura"
version = "0.1.0"
edition = "2018"
authors = ["ronanyeah"]
repository = "https://github.com/ronanyeah/rust-hasura"
readme = "README.md"
keywords = ["rust"]
categories = ["rust"]

[dependencies]
juniper = "0.15.0"
graphql_client = "0.9.0"
serde = "1.0.118"
serde_json = "1.0.60"
uuid_foo = { package = "uuid", version = "0.8.1", features = ["serde"] }
jsonwebtoken = "7.2.0"
reqwest = { version = "0.10.9", features = ["json"] }
futures = "0.3.8"
envy = "0.4.1"
actix-web = "3.3.2"
actix-http = "2.2.0"
actix-rt = "1.1.1"
async-std = "1.8.0"

[[bin]]
name = "example"
path = "src/main.rs"
